--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,17 @@
 server {
-  listen 80;
+  listen 443;
+
+  ssl on;
+
+  ssl_session_cache   shared:SSL:10m;
+  ssl_session_timeout 10m;
+
+  ssl_certificate     /etc/ssl/certs/site-certificate.pem;
+  ssl_certificate_key /etc/ssl/certs/site-certificate.key;
+  ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
   location / {
-    proxy_pass http://$FLASK_SERVER_ADDR;
+    proxy_pass https://$FLASK_SERVER_ADDR;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
